fix: 🐛 fix out of memory in case of reading too large files
Old solution first read all passDtos to a list then sent them to the
next step. New Solution starts processing passDtos while reading the
file therefore program does not store all passDtos in memory but only
the currently read one.

✅ Closes: 1711